Correct sizing for cover text on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,5 +355,7 @@ td {
 
     #cover-text {
         left: 0;
+        width: 300px;
+        height: 200px;
     }
 }
